# simple_mcp_server

./: .env.example  .env.public  .gitignore  Procfile  README.md  cli.py  cli_endpoints.py  cloudflare_deployment.md  config.py  logging_config.py  main.py  pyproject.toml  railway.py  requirements.txt  server.py  setup.py  sse.py  tools.py  workflow.md
.claude/: CLAUDE.md  settings.local.json
docker/: Dockerfile.test  docker-compose.test.yml
docs/: install.md  merge_plan.md  project_plan.md  workflow.md
oauth/: __init__.py  endpoints.py  jwt_utils.py  middleware.py  stores.py  templates.py
