[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-mcp-server"
version = "0.1.0"
description = "MCP server with OAuth 2.1 and Supabase auth"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "mcp[cli]==1.3.0",
    "sse-starlette==2.2.1",
    "python-dotenv==1.0.1",
    "httpx>=0.26,<0.28",
    "PyJWT==2.10.1",
    "cryptography==44.0.0",
    "python-multipart==0.0.17",
    "supabase==2.10.0",
]

[project.scripts]
simple-mcp-server = "cli:main"
